; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_tncc.c_tncc_imc_notify_connection_change.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_tncc.c_tncc_imc_notify_connection_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tnc_if_imc = type { i64 (i32, i32, i64)*, i32, i32, i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [61 x i8] c"TNC: Calling TNC_IMC_NotifyConnectionChange(%d) for IMC '%s'\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"TNC: TNC_IMC_NotifyConnectionChange: %lu\00", align 1
@TNC_RESULT_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tnc_if_imc*, i64)* @tncc_imc_notify_connection_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tncc_imc_notify_connection_change(%struct.tnc_if_imc* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tnc_if_imc*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.tnc_if_imc* %0, %struct.tnc_if_imc** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.tnc_if_imc*, %struct.tnc_if_imc** %4, align 8
  %8 = getelementptr inbounds %struct.tnc_if_imc, %struct.tnc_if_imc* %7, i32 0, i32 0
  %9 = load i64 (i32, i32, i64)*, i64 (i32, i32, i64)** %8, align 8
  %10 = icmp eq i64 (i32, i32, i64)* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %40

12:                                               ; preds = %2
  %13 = load i32, i32* @MSG_DEBUG, align 4
  %14 = load i64, i64* %5, align 8
  %15 = trunc i64 %14 to i32
  %16 = sext i32 %15 to i64
  %17 = load %struct.tnc_if_imc*, %struct.tnc_if_imc** %4, align 8
  %18 = getelementptr inbounds %struct.tnc_if_imc, %struct.tnc_if_imc* %17, i32 0, i32 3
  %19 = load i32, i32* %18, align 8
  %20 = call i32 (i32, i8*, i64, ...) @wpa_printf(i32 %13, i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str, i64 0, i64 0), i64 %16, i32 %19)
  %21 = load %struct.tnc_if_imc*, %struct.tnc_if_imc** %4, align 8
  %22 = getelementptr inbounds %struct.tnc_if_imc, %struct.tnc_if_imc* %21, i32 0, i32 0
  %23 = load i64 (i32, i32, i64)*, i64 (i32, i32, i64)** %22, align 8
  %24 = load %struct.tnc_if_imc*, %struct.tnc_if_imc** %4, align 8
  %25 = getelementptr inbounds %struct.tnc_if_imc, %struct.tnc_if_imc* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.tnc_if_imc*, %struct.tnc_if_imc** %4, align 8
  %28 = getelementptr inbounds %struct.tnc_if_imc, %struct.tnc_if_imc* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load i64, i64* %5, align 8
  %31 = call i64 %23(i32 %26, i32 %29, i64 %30)
  store i64 %31, i64* %6, align 8
  %32 = load i32, i32* @MSG_DEBUG, align 4
  %33 = load i64, i64* %6, align 8
  %34 = call i32 (i32, i8*, i64, ...) @wpa_printf(i32 %32, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i64 %33)
  %35 = load i64, i64* %6, align 8
  %36 = load i64, i64* @TNC_RESULT_SUCCESS, align 8
  %37 = icmp eq i64 %35, %36
  %38 = zext i1 %37 to i64
  %39 = select i1 %37, i32 0, i32 -1
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %12, %11
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @wpa_printf(i32, i8*, i64, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
